# Prog2-NHF

./: CMakeLists.txt  GameBase.h  GameSimulator.cpp  GameSimulator.h  IOHandler.cpp  IOHandler.h  MyString.cpp  MyString.h  PaperPlayer.h  Player.h  PlayerBase.h  PlayerContainer.cpp  PlayerContainer.h  README.md  RandomPlayer.h  ScissorsPlayer.h  SequencePlayer.cpp  SequencePlayer.h  SimulationLog.cpp  SimulationLog.h  StonePlayer.h  bemenet.txt  cross_platform_getline.h  gtest_lite.h  memtrace.cpp  memtrace.h  sequences.txt  test.cpp
html/: _game_base_8h_source.html  _game_simulator_8h_source.html  _i_o_handler_8h_source.html  _my_string_8cpp.html  _my_string_8h.html  _my_string_8h_source.html  _paper_player_8h_source.html  _player_8h_source.html  _player_base_8h_source.html  _player_container_8h_source.html  _random_player_8h_source.html  _scissors_player_8h_source.html  _sequence_player_8h_source.html  _simulation_log_8h_source.html  _stone_player_8h_source.html  annotated.html  class_game_simulator-members.html  class_game_simulator.html  class_i_o_handler-members.html  class_i_o_handler.html  class_paper_player-members.html  class_paper_player.html  class_player-members.html  class_player.html  class_player_base-members.html  class_player_base.html  class_player_container-members.html  class_player_container.html  class_random_player-members.html  class_random_player.html  class_scissors_player-members.html  class_scissors_player.html  class_sequence_player-members.html  class_sequence_player.html  class_simulation_log-members.html  class_simulation_log.html  (+36 more)
(+85 files in other folders)
